<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:gravity="center_horizontal"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent" >

	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal">
		
		<EditText
			android:id="@+id/editText"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:hint="@string/Hint"
			android:layout_weight="1"
			/>
		<Button
			android:id="@+id/button2"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/CleanButton"
			android:onClick="onCleanButtonClick"
			/>
	</LinearLayout>
	<Button
		android:id="@+id/button1"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/SpeechButton"
		android:onClick="onSpeechButtonClick"
		android:visibility="invisible"
		/>
	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal">
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/icon"
			/>
		<Spinner
			android:id="@+id/spinner1" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			android:entries="@array/icons"
			/>
	</LinearLayout>
	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal">
		
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/back"
			/>
		<Spinner
			android:id="@+id/spinner2" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			android:entries="@array/backs" 
			/>
	</LinearLayout>
	<Button
		android:id="@+id/button"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/OKButton"
		android:onClick="onOKButtonClick"
		/>

</LinearLayout>
