<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:gravity="center_horizontal"
	android:orientation="vertical" >

	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:gravity="center_vertical"
		android:orientation="horizontal">
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/pref"
			/>
		<Spinner
			android:id="@+id/spinner_pref" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			/>
	</LinearLayout>
	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:gravity="center_vertical"
		android:orientation="horizontal">
		
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/city"
			/>
		<Spinner
			android:id="@+id/spinner_city" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			/>
	</LinearLayout>
	<Button
		android:id="@+id/button_ok"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/OKButton"
		android:onClick="onOKButtonClick"
		/>

</LinearLayout>
